# lv_port_linux_frame_buffer

./: .gitignore  CMakeLists.txt  Makefile  lv_conf.h  main.c
sevio_ui_01/: sevio_ui_01.sll  sevio_ui_01.spj
sevio_ui_02/: sevio_ui_02.sll  sevio_ui_02.spj
squareline/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_font_tahoma.c  ui_font_tahomabd.c  ui_helpers.c  ui_helpers.h  ui_img_eth_img_png.c  ui_img_frecce_d_r_png.c  ui_img_logo2_png.c  ui_img_logo_png.c  ui_img_network_png.c  ui_img_port_png.c  ui_img_row_d_png.c  ui_img_row_l_png.c  ui_img_row_r_png.c  ui_img_sel_off_png.c  ui_img_sel_on_png.c  ui_img_status_fail2_png.c  ui_img_status_fail_png.c  ui_img_status_pass2_png.c  ui_img_status_pass_png.c  ui_img_status_tree_png.c  ui_img_vpn_png.c  ui_img_wifi_img2_png.c  ui_img_wifi_img_png.c
squareline2/: ui.c  ui.h  ui2.c  ui2.h  ui2_img_gps_png.c  ui2_img_mediumsignal_png.c  ui2_img_sim_png.c  ui_comp.c  ui_comp.h  ui_font_arialbd.c  ui_font_dejavusans.c  ui_helpers.c  ui_helpers.h  ui_img_1_png.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_4_png.c  ui_img_5_png.c  ui_img_frecce_d_r_png.c  ui_img_gnss_png.c  ui_img_gps_png.c  ui_img_io_png.c  ui_img_mob_no_signal_png.c  ui_img_mob_signal_1_png.c  ui_img_mob_signal_2_png.c  ui_img_mob_signal_3_png.c  ui_img_mob_signal_4_png.c  ui_img_mob_signal_5_png.c  ui_img_no_signal_png.c  ui_img_nosignal_png.c  ui_img_port_png.c  ui_img_row_d_png.c  ui_img_row_l_png.c  ui_img_row_r_png.c  ui_img_signal_0_png.c  ui_img_signal_1_png.c  ui_img_signal_2_png.c  ui_img_signal_3_png.c  ui_img_signal_4_png.c  ui_img_signal_5_png.c  (+10 more)
ui/: ubus.c  (+8 more)
(+8 files in other folders)
